linera-protocol/linera-views-derive/src/snapshots/linera_views_derive__tests__test_generate_view_code_custom__path__to__ContextType_with_where.snap
---
source: linera-views-derive/src/lib.rs
expression: "pretty(generate_view_code(input, true).unwrap())"
---
impl<MyParam> linera_views::views::View for TestView<MyParam>
where
    custom::path::to::ContextType: linera_views::context::Context,
    MyParam: Send + Sync + 'static,
    RegisterView<
        custom::path::to::ContextType,
        usize,
    >: linera_views::views::View<Context = custom::path::to::ContextType>,
    CollectionView<
        custom::path::to::ContextType,
        usize,
        RegisterView<custom::path::to::ContextType, usize>,
    >: linera_views::views::View<Context = custom::path::to::ContextType>,
{
    const NUM_INIT_KEYS: usize = <RegisterView<
        custom::path::to::ContextType,
        usize,
    > as linera_views::views::View>::NUM_INIT_KEYS
        + <CollectionView<
            custom::path::to::ContextType,
            usize,
            RegisterView<custom::path::to::ContextType, usize>,
        > as linera_views::views::View>::NUM_INIT_KEYS;
    type Context = custom::path::to::ContextType;
    fn context(&self) -> custom::path::to::ContextType {
        use linera_views::context::Context as _;
        let __bytes_to_trim = 2;
        let context = self.register.context();
        context.clone_with_trimmed_key(__bytes_to_trim)
    }
    fn pre_load(
        context: &custom::path::to::ContextType,
    ) -> Result<Vec<Vec<u8>>, linera_views::ViewError> {
        use linera_views::context::Context as _;
        let mut keys = Vec::new();
        let __linera_reserved_index = 0u8;
        let __linera_reserved_base_key = context
            .base_key()
            .derive_tag_key(
                linera_views::views::MIN_VIEW_TAG,
                &__linera_reserved_index,
            )?;
        keys.extend(
            RegisterView::<
                custom::path::to::ContextType,
                usize,
            >::pre_load(&context.clone_with_base_key(__linera_reserved_base_key))?,
        );
        let __linera_reserved_index = 1u8;
        let __linera_reserved_base_key = context
            .base_key()
            .derive_tag_key(
                linera_views::views::MIN_VIEW_TAG,
                &__linera_reserved_index,
            )?;
        keys.extend(
            CollectionView::<
                custom::path::to::ContextType,
                usize,
                RegisterView<custom::path::to::ContextType, usize>,
            >::pre_load(&context.clone_with_base_key(__linera_reserved_base_key))?,
        );
        Ok(keys)
    }
    fn post_load(
        context: custom::path::to::ContextType,
        values: &[Option<Vec<u8>>],
    ) -> Result<Self, linera_views::ViewError> {
        use linera_views::context::Context as _;
        let mut __linera_reserved_pos = 0;
        let __linera_reserved_index = 0u8;
        let __linera_reserved_base_key = context
            .base_key()
            .derive_tag_key(
                linera_views::views::MIN_VIEW_TAG,
                &__linera_reserved_index,
            )?;
        let __linera_reserved_pos_next = __linera_reserved_pos
            + RegisterView::<custom::path::to::ContextType, usize>::NUM_INIT_KEYS;
        let register = RegisterView::<
            custom::path::to::ContextType,
            usize,
        >::post_load(
            context.clone_with_base_key(__linera_reserved_base_key),
            &values[__linera_reserved_pos..__linera_reserved_pos_next],
        )?;
        __linera_reserved_pos = __linera_reserved_pos_next;
        let __linera_reserved_index = 1u8;
        let __linera_reserved_base_key = context
            .base_key()
            .derive_tag_key(
                linera_views::views::MIN_VIEW_TAG,
                &__linera_reserved_index,
            )?;
        let __linera_reserved_pos_next = __linera_reserved_pos
            + CollectionView::<
                custom::path::to::ContextType,
                usize,
                RegisterView<custom::path::to::ContextType, usize>,
            >::NUM_INIT_KEYS;
        let collection = CollectionView::<
            custom::path::to::ContextType,
            usize,
            RegisterView<custom::path::to::ContextType, usize>,
        >::post_load(
            context.clone_with_base_key(__linera_reserved_base_key),
            &values[__linera_reserved_pos..__linera_reserved_pos_next],
        )?;
        __linera_reserved_pos = __linera_reserved_pos_next;
        Ok(Self { register, collection })
    }
    async fn load(
        context: custom::path::to::ContextType,
    ) -> Result<Self, linera_views::ViewError> {
        use linera_views::{context::Context as _, store::ReadableKeyValueStore as _};
        if Self::NUM_INIT_KEYS == 0 {
            Self::post_load(context, &[])
        } else {
            let keys = Self::pre_load(&context)?;
            let values = context.store().read_multi_values_bytes(&keys).await?;
            Self::post_load(context, &values)
        }
    }
    fn rollback(&mut self) {
        self.register.rollback();
        self.collection.rollback();
    }
    async fn has_pending_changes(&self) -> bool {
        if self.register.has_pending_changes().await {
            return true;
        }
        if self.collection.has_pending_changes().await {
            return true;
        }
        false
    }
    fn pre_save(
        &self,
        batch: &mut linera_views::batch::Batch,
    ) -> Result<bool, linera_views::ViewError> {
        let deleted0 = self.register.pre_save(batch)?;
        let deleted1 = self.collection.pre_save(batch)?;
        Ok(deleted0 && deleted1)
    }
    fn post_save(&mut self) {
        self.register.post_save();
        self.collection.post_save();
    }
    fn clear(&mut self) {
        self.register.clear();
        self.collection.clear();
    }
}
